styles.css
@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');

@import url('https://fonts.googleapis.com/css?family=Bangers|Quicksand&display=swap');

body {
    margin: 0;
}

h1 {
    display:none;
}

.menu {
position: absolute;
width: 100%;
top: -10em;
display: block;
text-align: center;
margin: 0;
background-color: rgba(0, 0, 250, 0.9);
z-index: 2;
transition: 0.8s ease-out;
}

.menu__clicked {
top: 0em;
transition: 0.8s ease-out;
}

.menu__item {
    font-family: 'Quicksand', sans-serif;
    padding: 0.2em;
    display: block;
    color: white;
    max-width: max-content;
    margin: 0 auto;
    
}

.menu__item:hover {
    color: crimson;
}

.menu__item:active {
    color: crimson;
}

.menu__title {
    color: darkblue;
    font-size: 1.5em;
    text-indent: 0em;
    text-align: center;
    font-family: 'Quicksand', sans-serif;
    font-family: 'Bangers', cursive;
    padding-top: 1em;
    padding-bottom: 0.5em;
    margin: 0;

}

.main__goback {
    color: rgba(255, 255, 255, 0.8);
    background-color: rgba(0, 0, 250, 0.6);
    padding: 0.2em;
    position: fixed;
    right: 1em;
    bottom: 1em;
    z-index: 2;
}

.main__content {
position: relative;
top: 4em;
display: grid;
grid-template-columns: 1fr;

}

.section__photo {
    max-width: 30%;
    border-radius: 50%;
    float: left;
    padding: 0 0.5em 0 0.5em;
}

.download__section {
    text-align: center;
}

.download__section--button { 
    background-color: rgba(0, 0, 250, 0.3);
    padding: 0.5em;
    margin: 0 1.5em;
    border-radius: 0.2em;
}

h2, h4, h6 {
    margin-left: 0.5em;
}

p {
    text-indent: 2em;
    text-align: justify;
    font-size: 1.2em;
    line-height: 1.8em;
    margin: 0 0.5em;
}

a {
    text-decoration: none;
}

table {
    margin: 0 0.5em;
    
}

tr {
    height: 2em;
}

td {
    padding: 0.5em 0.5em 0.5em 0;
}

.summary__window {
    display: none;
    position: sticky;
    top: 0;
    left: 0;
    width: 1fr;
    height: 500px;
}

.summary__window__visible {
    display: block;
    z-index: 4;
    background-color: black;
    color: blanchedalmond;
}

input, textarea, select {
    border-radius: 0.4em;
    padding: 0.7em;
    border-style: solid;
    border-color: rgba(0, 0, 250, 0.6);
    border-width: 0.08em;
}

button {
    padding: 0.5em;
}

.section__breaker {
    min-width: 1fr;
    height: 2em;
    display: block;
    background-color: rgba(0, 0, 250, 0.6);
    margin: 3em 0;
}

.section__breaker:before {
    content: "";
    display: block;
    background-color: rgba(0, 0, 250, 0.8);
    min-width: 1fr;
    height: 1em;
    
    
}

.section__breaker:after {
    content: "";
    display: block;
    background-color: rgba(0, 0, 250, 0.3);
    height: 2em;
    min-width: 1fr;

}

footer {
    margin: 0 0.5em;
}


@media screen and (min-width:768px) {
    h1 {
        display:block;
    }

    .menu__item {
        display: inline;
    }
}

